# nand2tetris

./: .gitignore
projects/01/: And.hdl  And16.hdl  And3.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  Add16.hdl  FullAdder.hdl  FullAdder.out  HalfAdder.hdl
projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM64.out  RAM8.hdl  Register.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.hack  Fill2.asm
projects/04/mult/: mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl  Memory.tst
projects/06/hack-assembler/: hack-assembler.cabal
projects/06/hack-assembler/src/: Core.hs  Lib.hs  Main.hs
projects/06/pong/: Pong0.hack
projects/07/: PushPopTest.asm  PushPopTest.vm  SimpleEq.asm  SimpleEq.vm
projects/07/MemoryAccess/BasicTest/: BasicTest.asm
projects/07/MemoryAccess/PointerTest/: PointerTest.asm
projects/07/MemoryAccess/StaticTest/: StaticTest.asm
projects/07/StackArithmetic/StackTest/: .asm
projects/08/FunctionCalls/FibonacciElement/: FibonacciElement.asm  Sys.vm
projects/08/FunctionCalls/NestedCall/: NestedCall.asm
projects/08/FunctionCalls/SimpleFunction/: SimpleFunction.asm
projects/08/FunctionCalls/StaticsTest/: .asm  StaticsTest.asm
projects/08/ProgramFlow/BasicLoop/: BasicLoop.asm
projects/08/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
projects/hack-assembler/: hack-assembler.cabal  package.yaml
projects/hack-assembler/src/: Core.hs
projects/hack-vm/: hack-vm.cabal  package.yaml
projects/hack-vm/src/: Core.hs  Lib.hs  Main.hs
projects/hackc/: README.md  hackc.cabal  package.yaml
projects/hackc/src/: Core.hs  Main.hs  Parser.hs
