name:                hack-vm
version:             0.1.0.0
homepage:            https://github.com/githubuser/hack-vm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , megaparsec >= 5.0 && < 6
                     , microlens >= 0.4.8.1
                     , microlens-platform
                     , microlens-th >= 0.4.1.1
                     , mtl >= 2.2.1
                     , transformers >= 0.5.2.0

  default-language:    Haskell2010

executable hack-vm-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.7.1
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , hack-vm
                     , megaparsec >= 5.0 && < 6
                     , microlens >= 0.4.8.1
                     , microlens-platform
                     , microlens-th >= 0.4.1.1
                     , mtl >= 2.2.1
                     , transformers >= 0.5.2.0
  default-language:    Haskell2010
  other-modules:       Lib                        

source-repository head
  type:     git
  location: https://github.com/githubuser/hack-vm
