name:                hack-assembler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hack-assembler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , megaparsec >= 5.0 && < 6
                     , microlens-platform
                     , mtl >= 2.2.1
                     , transformers >= 0.5.2.0

executable HackAssembler
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , hack-assembler
                     , megaparsec >= 5.0 && < 6
                     , microlens-platform
                     , mtl >= 2.2.1
                     , transformers >= 0.5.2.0